Fix the new project UI overflowing the page

--- a/src/styles/_overview.scss
+++ b/src/styles/_overview.scss
@@ -319,7 +319,7 @@ $cell-margin: 2px;
 
   // 'topbar-left months   topbar-right'
   // 'topbar-left days     topbar-right'
-  grid-template-columns: 200px min-content 115px;
+  grid-template-columns: 200px min-content 110px;
   grid-template-rows: 15px 15px;
   column-gap: 3px;
   // justify-content: space-between;
